[package]
name = "option-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "option_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.1", features = ["metadata"] }
pyth-sdk-solana = "0.10.1" 
hex = "0.4"
hex-literal = "0.4"
pyth-solana-receiver-sdk = "0.6.1"
ahash="=0.7.8"
bytemuck = { version = "1.7", features = ["derive"] }
num-traits="0.2.19"